images size changed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -379,9 +379,9 @@ Fax: +1 (0) 000 0000 002</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Links</strong><br>
-<a class="text-white" href="/">Website builder</a><br>
-<a class="text-white" href="/">Download for Windows</a><br>
-<a class="text-white" href="/">Download for Mac</a></p>
+<a class="text-white" href="/">Lorem ipsum</a><br>
+<a class="text-white" href="/">Lorem ipsum</a><br>
+<a class="text-white" href="/">Lorem ipsum</a></p>
             </div>
 
         </div>
