social icons removed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -283,7 +283,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">FOLLOW US</h3>
-                <div><a class="btn btn-social" title="Twitter" target="_blank" href="/"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/pages/Mobirise/1616226671953247"><i class="socicon socicon-facebook"></i></a> <a class="btn btn-social" title="Google+" target="_blank" href="/"><i class="socicon socicon-googleplus"></i></a> <a class="btn btn-social" title="YouTube" target="_blank" href="https://www.youtube.com/channel/UCt_tncVAetpK5JeM8L-8jyw"><i class="socicon socicon-youtube"></i></a> <a class="btn btn-social" title="Instagram" target="_blank" href="/"><i class="socicon socicon-instagram"></i></a> <a class="btn btn-social" title="Pinterest" target="_blank" href="/"><i class="socicon socicon-pinterest"></i></a> <a class="btn btn-social" title="Tumblr" target="_blank" href="/"><i class="socicon socicon-tumblr"></i></a> <a class="btn btn-social" title="LinkedIn" target="_blank" href="/"><i class="socicon socicon-linkedin"></i></a> <a class="btn btn-social" title="VKontakte" target="_blank" href="#"><i class="socicon socicon-vkontakte"></i></a> <a class="btn btn-social" title="Odnoklassniki" target="_blank" href="#"><i class="socicon socicon-odnoklassniki"></i></a> </div>
+                <div><a class="btn btn-social" title="Twitter" target="_blank" href="/"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/pages/Mobirise/1616226671953247"><i class="socicon socicon-facebook"></i></a> <a class="btn btn-social" title="Google+" target="_blank" href="/"><i class="socicon socicon-googleplus"></i></a> <a class="btn btn-social" title="YouTube" target="_blank" href="https://www.youtube.com/channel/UCt_tncVAetpK5JeM8L-8jyw"><i class="socicon socicon-youtube"></i></a> <a class="btn btn-social" title="Instagram" target="_blank" href="/"><i class="socicon socicon-instagram"></i></a> </div>
             </div>
         </div>
     </div>
@@ -363,21 +363,18 @@
     
     <div class="container">
         <div class="row">
-            <div class="mbr-footer-content col-xs-12 col-md-3">
-                <div><img src="assets/images/logo-304x65.png"></div>
-            </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3">
+            <div class="mbr-footer-content col-xs-12 col-md-4">
                 <p><strong>Address</strong><br>
 1234 Street Name<br>
 City, AA 99999</p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3">
+            <div class="mbr-footer-content col-xs-12 col-md-4">
                 <p><strong>Contacts</strong><br>
 Email: support@insideouut.com<br>
 Phone: +1 (0) 000 0000 001<br>
 Fax: +1 (0) 000 0000 002</p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3">
+            <div class="mbr-footer-content col-xs-12 col-md-4">
                 <p><strong>Links</strong><br>
 <a class="text-white" href="/">Lorem ipsum</a><br>
 <a class="text-white" href="/">Lorem ipsum</a><br>
