--- a/views/index.ejs
+++ b/views/index.ejs
@@ -312,7 +312,7 @@
                     </div>
 
 
-                    <form action="/" method="post" data-form-title="CONTACT FORM">
+                    <form action="/" method="get" data-form-title="CONTACT FORM">
 
                         <input type="hidden" value="vJKFKlEkeu6XTn5GXARCriaeXSNzZZRVb0yUWtMDqUcN9Yl8OEUevQ2J3HJ1Z+qJxUWBumQQg/XL4BW+ySAGY9+13IzSEOV9jpk3kV6faOX/jGbjV7apYkpc+x5j3z7r" data-form-email="true">
 
@@ -346,7 +346,7 @@
                             <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-4-message"></textarea>
                         </div>
 
-                        <div><button type="submit" class="btn btn-secondary">CONTACT US</button></div>
+                        <div><button type="submit" class="btn btn-secondary" href="/">CONTACT US</button></div>
 
                     </form>
                 </div>
@@ -403,8 +403,6 @@ Fax: +1 (0) 000 0000 002</p>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/formoid/formoid.min.js"></script>
-  
   
   <input name="animation" type="hidden">
   </body>
